--- a/src/pagese/Courses/Courses.css
+++ b/src/pagese/Courses/Courses.css
@@ -3,3 +3,11 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 5px;
 }
+
+@media screen and (max-width: 600px) {
+    .creategrid{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        
+    }
+}
