--- a/src/pagese/Courses/SingleCourse/SingleCourse.css
+++ b/src/pagese/Courses/SingleCourse/SingleCourse.css
@@ -6,3 +6,16 @@
     width: 100%;
     height: 280px;
 }
+
+@media screen and (min-width: 280px) {
+    .singleCard-body{
+        height: 300px;
+        width: 100%;
+    }
+}
+@media screen and (mix-width: 600px) {
+    .singleCard-body{
+        height: 300px;
+        width: 100%;
+    }
+}
